      values, so they will stick and scale correctly when the split container
      resize.
    * **Update:** Any task out of range is culled in gantt chart.
    * **Update:** Added new buttons to change the range in -1/+1 month,
      -1/+1 week, -1/+1 day.
    * **Update:** Replaced the **Date.format()** (originally replaced by
      jQueryGantt **date.js**) with **date.format.js** library.
    * **Update**: Changed the background of the Grid and Gantt editors.

0.2.0.b8
========

* **SOM:**

  * **Update:** Renamed **Version.version_of** attribute to **Version.task**.
  * **Fix:** Fixed **Version.version_number** where it was not possible to have
    a version number bigger than 2.
  * **Fix:** In **db.setup()** Ticket statuses are only created if there aren't
    any.
  * **Fix:** Added **Vacation** class to the registered class list in
    stalker.db.

* **WebUI:**
  * **New:** Studio Page is created.It has Tasks and Resources as Tabs.
  * **New:** Update Studio function id added.
  * **New:** Thumbnail Add function is added to several objects' Summarize Pages.
      (Task, Asset, Shot, Sequence,Department, Group). List Page is also updated
      by new thumbnail information.
  * **Fix:** dgrid height attribute is updated and new div's are added for
      dgrid object.
  * **Fix:** Working hours for each day is taken from database in
      Studio Update Dialog.


* **WebUI:**

  * **Fix:** Fixed DGrid auto height problem.

0.2.0.b7
========

* **SOM:**

  * **Update:** **Task.schedule_constraint** is now reflected to the tjp file
    correctly.
  * **Fix:** **check_circular_dependency()** now checks if the **entity** and
    the **other_entity** are the same.
  * **Fix:** **Task.to_tjp()** now correctly add the dependent tasks of a
    container task.
  * **Fix:** **Task.__eq__()** now correctly considers the parent, depends,
    resources, start and end dates.
  * **Update:** **Task.priority** is now reflected in tjp file if it is